--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "@dcloudio/uni-quickapp-webview": "3.0.0-4030620241128001",
     "postcss": "^8.5.6",
     "vue": "^3.4.21",
-    "vue-i18n": "^9.1.9"
+    "vue-i18n": "^9.1.9",
+    "z-paging": "^2.8.7"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
